2007-01-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{common,geo,std}.txt: Added words.

2006-10-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version bump.

2006-10-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog: Converted to UTF-8.

	* NEWS: Updated.

	=== Version 0.1.7 ===

2006-10-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/Makefile.am: Specify LC_ALL=C to make sure 'sort' always works.

2006-10-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix 'make distcheck', plus a little enhancement on dict location.

	* src/thbrk/brk-maximal.c (brk_get_dict): Try openning dict at
	$LIBTHAI_DICTDIR environment before the default location.

	* tests/Makefile.am, +tests/test-thbrk.sh, +tests/test-thwbrk.sh:
	Added wrapper scripts to call test_th[w]brk programs with
	LIBTHAI_DICTDIR set to trie in build tree.

	* data/Makefile.am (EXTRA_DIST): Do not ship the auto-generated
	tdict.txt in source.

2006-10-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* tests/test_thbrk.c (main), tests/test_thwbrk.c (main): Rearrange
	source. Remove some unnecessary variables. Adjust style. Fix warnings.

2006-10-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* tests/test_thbrk.c (main), tests/test_thwbrk.c (main): Fix checking 
	value for the length of the output from th_[w]brk_line() tests.

2006-10-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std.txt: Added some compound words.

	* data/tdict-{common,ict}.txt: Added words.

2006-10-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std.txt: Added some compound words.

	* data/tdict-{common,ict}.txt: Added words.

2006-09-19  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/Makefile.am (libthbrk_la_SOURCES), src/thbrk/thbrk.c,
	+src/thbrk/brk-maximal.{h,c}: Split low-level mechanisms to
	brk-maximal module.
